# Avogadro-Packmol-Extension

./: CMakeLists.txt  highlighter.cpp  highlighter.h  packmoldialog.cpp  packmoldialog.h  packmoldialog.ui  packmolextension.cpp  packmolextension.h  structuresmodel.cpp
cmake/modules/: FindOpenBabel2.cmake
